--- a/esparto/package.json
+++ b/esparto/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "browser-router": "^0.2.0",
+    "cdbreact": "^1.5.18",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -17,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-user-profile": "^1.0.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
