--- a/node-app/package.json
+++ b/node-app/package.json
@@ -21,5 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
